ajustando os estilos

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whatsgram - Perfil de Viagens</title>
+    <title>Travel-Gram - Style Guide</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <h1>Bem-vindo ao Travel-Gram</h1>
+    <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
