Ajuste de fontes no root

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel-Gram - Style Guide</title>
+    <title>Travel-Gram - Fontes</title>
+    <!-- Pré-conexão para otimizar o carregamento da fonte -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Importação da fonte Poppins (Regular e Bold) -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <h1>Bem-vindo ao Travel-Gram</h1>
+    <p>Explore o mundo com estilo e organização.</p>
 </body>
 </html>
