--- a/index.html
+++ b/index.html
@@ -12,7 +12,36 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <h1>Bem-vindo ao Travel-Gram</h1>
-    <p>Explore o mundo com estilo e organização.</p>
+    <header>
+        <nav>
+            <!-- Logomarca -->
+            <a href="#" id="logo">
+                <img src="assets/Logo.svg" alt="Logomarca">
+            </a>
+            <!-- Menu de Navegação -->
+            <ul id="primary-menu">
+                <li>
+                    <a href="#">
+                        <img src="assets/icons/Magnifying-glass.svg" alt="Ícone de lupa">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="assets/icons/MapPin.svg" alt="Ícone de localização">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="assets/icons/AirplaneTilt.svg" alt="Ícone de avião">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
