--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <div class="bg-surface-color">
+        <nav class="container">
             <!-- Logomarca -->
             <a href="#" id="logo">
                 <img src="assets/Logo.svg" alt="Logomarca">
@@ -42,6 +42,9 @@
                 </li>
             </ul>
         </nav>
+    </div>
+    <header>
+        
     </header>
 </body>
 </html>
