--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </nav>
         <header class="">
             <div class="container">
-                <div class="profile">
+                <div id="profile">
                     <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
                     <div>
                         <h1>Isabela Torres</h1>
